--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "autoload": {
         "psr-4": {
             "AppBundle\\": "src/AppBundle",
-            "BlogBundle\\":"src/BlogBundle"
+            "BlogBundle\\":"src/BlogBundle",
+            "ShopBundle\\":"src/ShopBundle"
         },
         "classmap": [
             "app/AppKernel.php",
@@ -27,6 +28,7 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
+        "sideclick/bootstrap-modal-bundle": "^0.4.2",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
