Add more functionality and fix bugs

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -38,7 +38,7 @@ security:
                           secret:  '%secret%'
                           lifetime: 604800 # 1 week in seconds
                           path: /
-
-
-
     access_control:
+        - { path: ^/product, roles: ROLE_EDITOR }
+        - { path: ^/category, roles: ROLE_EDITOR }
+
