--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -9,6 +9,7 @@ imports:
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: en
+    product_image_upload: '%kernel.root_dir%/../web/themes/my_images'
 
 framework:
     #esi: ~
