--- a/src/ShopBundle/Resources/config/services.yml
+++ b/src/ShopBundle/Resources/config/services.yml
@@ -19,3 +19,7 @@ services:
               resource: '../../Controller'
               public: true
               tags: ['controller.service_arguments']
+
+      ShopBundle\Services\ProductService:
+              arguments:
+                          $targetDir: '%product_image_upload%'
