Add more functionality and fix bugs

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -37,3 +37,9 @@ services:
     AppBundle\Services\SendEmailService:
                 arguments:
                     $adminEmail: '%admin_email%'
+
+    symfony.form.type_guesser.tree:
+            class: Yavin\Symfony\Form\Type\TreeTypeGuesser
+            arguments: [ "@doctrine" ]
+            tags:
+                - { name: form.type_guesser }
