--- a/composer.json
+++ b/composer.json
@@ -22,18 +22,20 @@
         ]
     },
     "require": {
-        "php": ">=5.5.9",
+        "php": ">=7.1.0",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
         "incenteev/composer-parameter-handler": "^2.0",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
         "sideclick/bootstrap-modal-bundle": "^0.4.2",
+        "stof/doctrine-extensions-bundle": "^1.3",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.3.*",
-        "twig/twig": "^1.0||^2.0"
+        "twig/twig": "^1.0||^2.0",
+        "yavin/symfony-form-tree": "1.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
