--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -32,7 +32,7 @@ security:
                   # The route name the user can go to in order to logout
                   path: /logout
                   # The name of the route to redirect to after logging out
-                  target: article_index
+                  target: home_page
 
               remember_me:
                           secret:  '%secret%'
