Add more functionality and fix bugs

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -43,3 +43,7 @@ services:
             arguments: [ "@doctrine" ]
             tags:
                 - { name: form.type_guesser }
+
+    AppBundle\Services\UserServiceInterface:
+            alias: 'AppBundle\Services\UserService'
+            public: false
